apps/hello-world/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello-world
  namespace: hello-world
spec:
  parentRefs:
    - name: hello-world-gateway
      namespace: hello-world
  rules:
    - backendRefs:
        - name: hello-world
          port: 80
